@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.626 2006/03/22 01:28:10 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.627 2006/03/23 02:11:17 agaffney Exp $
+
+  22 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIStorageDevice.py, src/templates/x86ArchitectureTemplate.py:
+  allow iterating over Device object to get partitions
 
   21 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
